@startuml

title __CHESS's Class Diagram__\n

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Bishop {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Board {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.ChessModel {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.King {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Knight {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.LostPieces {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.MoveUtil {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Pawn {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Piece {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Queen {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Rook {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Timer {
    }
  }
  

  namespace fr.rphstudio.chess.game {
    class fr.rphstudio.chess.game.Undo {
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    class fr.rphstudio.chess.interf.ChessException {
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    class fr.rphstudio.chess.interf.EmptyCellException {
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    interface fr.rphstudio.chess.interf.IChess {
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    interface fr.rphstudio.chess.interf.IMove {
    }
  }
  

  namespace fr.rphstudio.chess.interf {
    class fr.rphstudio.chess.interf.OutOfBoardException {
    }
  }
  

  namespace fr.rphstudio.chess.launcher {
    class fr.rphstudio.chess.launcher.ChessFontManager {
    }
  }
  

  namespace fr.rphstudio.chess.launcher {
    class fr.rphstudio.chess.launcher.ChessGameController {
    }
  }
  

  namespace fr.rphstudio.chess.launcher {
    class fr.rphstudio.chess.launcher.MainLauncher {
    }
  }
  

  fr.rphstudio.chess.game.Bishop .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.ChessModel .up.|> fr.rphstudio.chess.interf.IChess
  fr.rphstudio.chess.game.ChessModel o-- fr.rphstudio.chess.game.Board : board
  fr.rphstudio.chess.game.ChessModel o-- fr.rphstudio.chess.game.LostPieces : lostPieces
  fr.rphstudio.chess.game.ChessModel o-- fr.rphstudio.chess.game.Timer : timer
  fr.rphstudio.chess.game.King .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.Knight .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.Pawn .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.Piece o-- fr.rphstudio.chess.interf.IChess.ChessColor : color
  fr.rphstudio.chess.game.Piece o-- fr.rphstudio.chess.interf.IMove : imove
  fr.rphstudio.chess.game.Piece o-- fr.rphstudio.chess.interf.IChess.ChessPosition : position
  fr.rphstudio.chess.game.Piece o-- fr.rphstudio.chess.interf.IChess.ChessType : type
  fr.rphstudio.chess.game.Queen .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.Rook .up.|> fr.rphstudio.chess.interf.IMove
  fr.rphstudio.chess.game.Undo o-- fr.rphstudio.chess.interf.IChess.ChessPosition : finalPosition
  fr.rphstudio.chess.game.Undo o-- fr.rphstudio.chess.game.Piece : pieceToMove
  fr.rphstudio.chess.game.Undo o-- fr.rphstudio.chess.game.Piece : removedPiece
  fr.rphstudio.chess.game.Undo o-- fr.rphstudio.chess.interf.IChess.ChessPosition : sourcePosition
  fr.rphstudio.chess.interf.EmptyCellException -up-|> fr.rphstudio.chess.interf.ChessException
  fr.rphstudio.chess.interf.OutOfBoardException -up-|> fr.rphstudio.chess.interf.ChessException
  fr.rphstudio.chess.launcher.ChessGameController -up-|> org.newdawn.slick.state.BasicGameState
  fr.rphstudio.chess.launcher.ChessGameController o-- fr.rphstudio.chess.interf.IChess : board
  fr.rphstudio.chess.launcher.ChessGameController o-- fr.rphstudio.chess.launcher.ChessFontManager : chessFont
  fr.rphstudio.chess.launcher.ChessGameController o-- fr.rphstudio.chess.interf.IChess.ChessColor : currentColor
  fr.rphstudio.chess.launcher.ChessGameController o-- fr.rphstudio.chess.interf.IChess.ChessPosition : selectPos
  fr.rphstudio.chess.launcher.MainLauncher -up-|> org.newdawn.slick.state.StateBasedGame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
